--- a/npm-frontend-service/package.json
+++ b/npm-frontend-service/package.json
@@ -21,7 +21,7 @@
     "vue-router": "^3.0.6",
     "vue-toasted": "^1.1.27",
     "vue-wait": "^1.4.6",
-    "vuetify": "^1.5.14",
+    "vuetify": "1.5.14",
     "lru": "^3.1.0"
   },
   "devDependencies": {
