--- a/npm-frontend-service/package.json
+++ b/npm-frontend-service/package.json
@@ -12,6 +12,9 @@
     "test": "vue-cli-service test:unit && vue-cli-service test:e2e",
     "build": "vue-cli-service build"
   },
+  "publishConfig": {
+    "registry": "http://demo.jfrogchina.com/artifactory/api/npm/alex-npm/"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
@@ -21,7 +24,7 @@
     "vue-router": "^3.0.6",
     "vue-toasted": "^1.1.27",
     "vue-wait": "^1.4.6",
-    "vuetify": "1.5.14",
+    "vuetify": "^1.5.14",
     "lru": "^3.1.0"
   },
   "devDependencies": {
