--- a/pipelines.yml
+++ b/pipelines.yml
@@ -14,12 +14,12 @@ resources:
 #       imageName: docker.artifactory-unified.soleng-us.jfrog.team/swampup_docker_app_demo
 #       imageTag: '${run_number}'
 #       autoPull: true
-#   - name: myBuildInfo
-#     type: BuildInfo
-#     configuration:
-#       sourceArtifactory: artifactory
-#       buildName: SampleApp
-#       buildNumber: 1
+  - name: myBuildInfo
+    type: BuildInfo
+    configuration:
+      sourceArtifactory: artifactory
+      buildName: SampleApp
+      buildNumber: 1
 #   - name: myPromotedBuildInfo
 #     type: BuildInfo
 #     configuration:
@@ -81,51 +81,50 @@ pipelines:
            my_env_var: '1.0.$run_number'
            ArtIP: $(echo ${int_artifactory_url}|awk -F '/' '{print $3}'|awk -F ':' '{print $1}')
     steps:
-#       - name: bld_backend
-#         type: MvnBuild
-#         configuration:
-#           nodePool: MyDynamicGCPNode
-#           sourceLocation: java-backend-service
-#           mvnCommand: clean install -ntp
-#           configFileLocation: .
-#           configFileName: mvn-art-config
-#           inputResources:
-#             - name: alex_github
-#               trigger: false
-#           integrations:
-#             - name: artifactory
-#           runtime:
-#             type: image
-#             image:
-#               auto:
-#                 language: java
-#                 versions:
-#                   - "11"
-#         execution:
-#           onStart:
-#             - javac -version
-#             - mvn --version
-#             - add_pipeline_variables previous_backend_ver=${my_env_var}
-#             - sed -ie 's/Default-Server/artifactory/g' $res_alex_github_resourcePath/java-backend-service/mvn-art-config
-#             - sed -ie "s/1.0.0/$my_env_var/g" $res_alex_github_resourcePath/java-backend-service/pom.xml
-#           onComplete:
-#             - echo $run_var
-#             - echo "Running $pipeline_name | $step_name on node ID $step_node_id"
-      - name: bld_frontend
-        type: NpmBuild
+      - name: bld_backend
+        type: MvnBuild
         configuration:
-          npmArgs: --no-progress --no-audit
-          sourceLocation: npm-frontend-service
-          repositoryName: alex-npm
+          sourceLocation: java-backend-service
+          mvnCommand: install
+          configFileLocation: .
+          configFileName: mvn-art-config
           inputResources:
             - name: alex_github
               trigger: false
           integrations:
             - name: artifactory
+          runtime:
+            type: image
+            image:
+              auto:
+                language: java
+                versions:
+                  - "11"
         execution:
           onStart:
-            - add_pipeline_variables previous_frontend_ver=${my_env_var}
-            - sed -i "s/3.0.0/$my_env_var/g" $res_alex_github_resourcePath/npm-frontend-service/package.json     
+            - javac -version
+            - mvn --version
+            - add_pipeline_variables previous_backend_ver=${my_env_var}
+            - sed -ie 's/Default-Server/artifactory/g' $res_alex_github_resourcePath/java-backend-service/mvn-art-config
+            - sed -ie "s/1.0.0/$my_env_var/g" $res_alex_github_resourcePath/java-backend-service/pom.xml
+          onComplete:
+            - echo $run_var
+            - echo "Running $pipeline_name | $step_name on node ID $step_node_id"
+#       - name: bld_frontend
+#         type: NpmBuild
+#         configuration:
+#           npmArgs: --no-progress --no-audit
+#           sourceLocation: npm-frontend-service
+#           repositoryName: alex-npm
+#           inputResources:
+#             - name: alex_github
+#               trigger: false
+#           integrations:
+#             - name: artifactory
+#         execution:
+#           onStart:
+#             - add_pipeline_variables previous_frontend_ver=${my_env_var}
+#             - sed -i "s/3.0.0/$my_env_var/g" $res_alex_github_resourcePath/npm-frontend-service/package.json     
 #       - name: publish_frontend
 #         type: NpmPublish
 #         configuration:
