--- a/pipelines.yml
+++ b/pipelines.yml
@@ -105,8 +105,8 @@ pipelines:
             - javac -version
             - mvn --version
             - add_pipeline_variables previous_backend_ver=${my_env_var}
-            - sed -ie 's/Default-Server/artifactory/g' $res_alex_github_resourcePath/java-backend-service/mvn-art-config
-            - sed -ie "s/1.0.0/$my_env_var/g" $res_alex_github_resourcePath/java-backend-service/pom.xml
+#             - sed -ie 's/Default-Server/artifactory/g' $res_alex_github_resourcePath/java-backend-service/mvn-art-config
+#             - sed -ie "s/1.0.0/$my_env_var/g" $res_alex_github_resourcePath/java-backend-service/pom.xml
           onComplete:
             - echo $run_var
             - echo "Running $pipeline_name | $step_name on node ID $step_node_id"
